# rust-wasm-image-processor

./: .gitignore  Cargo.toml  build.sh  index.html  package.json  worker.js
pkg/: README.md  package.json  rust_wasm_image_processor.d.ts  rust_wasm_image_processor.js  rust_wasm_image_processor_bg.wasm  rust_wasm_image_processor_bg.wasm.d.ts
src/: image_processor.rs  lib.rs
