[package]
name = "rust-wasm-image-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.6"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Request", "RequestInit", "Blob", "Response", "console"] }
thiserror = "2.0.12"
console_error_panic_hook = "0.1.7"
console = "0.15.11"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
